# PPISNBump

./: .gitignore  pyproject.toml
reproduce/: Run_Inference.ipynb  Run_Inference_max.ipynb  draw_pe_samples.ipynb  draw_selection_samples.ipynb  gwtc3_evolution-badcosmo.prior  run_chain.py  trace_evolution_badcosmo.nc  trace_evolution_nocosmo.nc
reproduce/.ipynb_checkpoints/: INCLUDE_LIST-checkpoint.txt  Run_Inference-checkpoint.ipynb  Untitled-checkpoint.ipynb  draw_selection_samples-checkpoint.ipynb  gwtc3_evolution-badcosmo-checkpoint.prior  gwtc3_evolution-checkpoint.prior  run_chain-checkpoint.py  test_priors-checkpoint.prior
src/scripts/: __init__.py  fisher_snrs.py  intensity_models.py  intensity_models2.py  run_stuff.ipynb  weighting.py
src/scripts/.ipynb_checkpoints/: intensity_models-checkpoint.py  intensity_models2-checkpoint.py  mock_injections-checkpoint.py
